Added run_notebooks.py and markdown updates

--- a/02_step_0_load_and_investigate_the_data.ipynb
+++ b/02_step_0_load_and_investigate_the_data.ipynb
@@ -16,7 +16,14 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "d1313bce",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-09-06T21:00:22.221646Z",
+     "iopub.status.busy": "2025-09-06T21:00:22.221646Z",
+     "iopub.status.idle": "2025-09-06T21:00:25.486739Z",
+     "shell.execute_reply": "2025-09-06T21:00:25.485738Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Setup and data loading\n",
@@ -37,6 +44,12 @@
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
+    },
+    "execution": {
+     "iopub.execute_input": "2025-09-06T21:00:25.488738Z",
+     "iopub.status.busy": "2025-09-06T21:00:25.488738Z",
+     "iopub.status.idle": "2025-09-06T21:00:25.501740Z",
+     "shell.execute_reply": "2025-09-06T21:00:25.500739Z"
     },
     "executionInfo": {
      "elapsed": 1189,
@@ -60,9 +73,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "6a10a76e",
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-09-06T21:00:25.503741Z",
+     "iopub.status.busy": "2025-09-06T21:00:25.502740Z",
+     "iopub.status.idle": "2025-09-06T21:00:25.516738Z",
+     "shell.execute_reply": "2025-09-06T21:00:25.516738Z"
+    },
     "executionInfo": {
      "elapsed": 66,
      "status": "ok",
@@ -89,6 +108,12 @@
    "execution_count": 4,
    "id": "ae66d8c4",
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-09-06T21:00:25.519742Z",
+     "iopub.status.busy": "2025-09-06T21:00:25.518741Z",
+     "iopub.status.idle": "2025-09-06T21:00:25.549740Z",
+     "shell.execute_reply": "2025-09-06T21:00:25.548738Z"
+    },
     "executionInfo": {
      "elapsed": 55,
      "status": "ok",
@@ -112,6 +137,12 @@
    "execution_count": 5,
    "id": "54776e8a",
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-09-06T21:00:25.551741Z",
+     "iopub.status.busy": "2025-09-06T21:00:25.551741Z",
+     "iopub.status.idle": "2025-09-06T21:00:25.565741Z",
+     "shell.execute_reply": "2025-09-06T21:00:25.564741Z"
+    },
     "executionInfo": {
      "elapsed": 64,
      "status": "ok",
@@ -136,6 +167,12 @@
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
+    },
+    "execution": {
+     "iopub.execute_input": "2025-09-06T21:00:25.567742Z",
+     "iopub.status.busy": "2025-09-06T21:00:25.567742Z",
+     "iopub.status.idle": "2025-09-06T21:00:25.643739Z",
+     "shell.execute_reply": "2025-09-06T21:00:25.642738Z"
     },
     "executionInfo": {
      "elapsed": 22,
@@ -178,6 +215,12 @@
    "execution_count": 7,
    "id": "6e218e85",
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-09-06T21:00:25.645741Z",
+     "iopub.status.busy": "2025-09-06T21:00:25.645741Z",
+     "iopub.status.idle": "2025-09-06T21:00:25.658738Z",
+     "shell.execute_reply": "2025-09-06T21:00:25.658738Z"
+    },
     "executionInfo": {
      "elapsed": 16,
      "status": "ok",
@@ -203,6 +246,12 @@
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
+    },
+    "execution": {
+     "iopub.execute_input": "2025-09-06T21:00:25.661741Z",
+     "iopub.status.busy": "2025-09-06T21:00:25.660740Z",
+     "iopub.status.idle": "2025-09-06T21:00:25.691740Z",
+     "shell.execute_reply": "2025-09-06T21:00:25.690738Z"
     },
     "executionInfo": {
      "elapsed": 47,
@@ -268,7 +317,14 @@
    "cell_type": "code",
    "execution_count": 9,
    "id": "feeb570a",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-09-06T21:00:25.693741Z",
+     "iopub.status.busy": "2025-09-06T21:00:25.692741Z",
+     "iopub.status.idle": "2025-09-06T21:00:25.706739Z",
+     "shell.execute_reply": "2025-09-06T21:00:25.706739Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
