--- a/03_step_1_examine_dt_customer_and_income.ipynb
+++ b/03_step_1_examine_dt_customer_and_income.ipynb
@@ -16,7 +16,14 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "d4b83527",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-09-06T21:00:31.942396Z",
+     "iopub.status.busy": "2025-09-06T21:00:31.941395Z",
+     "iopub.status.idle": "2025-09-06T21:00:33.575721Z",
+     "shell.execute_reply": "2025-09-06T21:00:33.574718Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Setup and data loading\n",
@@ -35,6 +42,12 @@
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
+    },
+    "execution": {
+     "iopub.execute_input": "2025-09-06T21:00:33.577720Z",
+     "iopub.status.busy": "2025-09-06T21:00:33.577720Z",
+     "iopub.status.idle": "2025-09-06T21:00:33.589718Z",
+     "shell.execute_reply": "2025-09-06T21:00:33.589718Z"
     },
     "executionInfo": {
      "elapsed": 52,
@@ -84,6 +97,12 @@
      "base_uri": "https://localhost:8080/",
      "height": 0
     },
+    "execution": {
+     "iopub.execute_input": "2025-09-06T21:00:33.592720Z",
+     "iopub.status.busy": "2025-09-06T21:00:33.591720Z",
+     "iopub.status.idle": "2025-09-06T21:00:33.669720Z",
+     "shell.execute_reply": "2025-09-06T21:00:33.668721Z"
+    },
     "executionInfo": {
      "elapsed": 24,
      "status": "ok",
@@ -100,317 +119,6 @@
    "outputs": [
     {
      "data": {
-      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
-       "columns": [
-        {
-         "name": "index",
-         "rawType": "int64",
-         "type": "integer"
-        },
-        {
-         "name": "ID",
-         "rawType": "int64",
-         "type": "integer"
-        },
-        {
-         "name": "Year_Birth",
-         "rawType": "int64",
-         "type": "integer"
-        },
-        {
-         "name": "Education",
-         "rawType": "object",
-         "type": "string"
-        },
-        {
-         "name": "Marital_Status",
-         "rawType": "object",
-         "type": "string"
-        },
-        {
-         "name": "Income",
-         "rawType": "object",
-         "type": "unknown"
-        },
-        {
-         "name": "Kidhome",
-         "rawType": "int64",
-         "type": "integer"
-        },
-        {
-         "name": "Teenhome",
-         "rawType": "int64",
-         "type": "integer"
-        },
-        {
-         "name": "Dt_Customer",
-         "rawType": "object",
-         "type": "string"
-        },
-        {
-         "name": "Recency",
-         "rawType": "int64",
-         "type": "integer"
-        },
-        {
-         "name": "MntWines",
-         "rawType": "int64",
-         "type": "integer"
-        },
-        {
-         "name": "MntFruits",
-         "rawType": "int64",
-         "type": "integer"
-        },
-        {
-         "name": "MntMeatProducts",
-         "rawType": "int64",
-         "type": "integer"
-        },
-        {
-         "name": "MntFishProducts",
-         "rawType": "int64",
-         "type": "integer"
-        },
-        {
-         "name": "MntSweetProducts",
-         "rawType": "int64",
-         "type": "integer"
-        },
-        {
-         "name": "MntGoldProds",
-         "rawType": "int64",
-         "type": "integer"
-        },
-        {
-         "name": "NumDealsPurchases",
-         "rawType": "int64",
-         "type": "integer"
-        },
-        {
-         "name": "NumWebPurchases",
-         "rawType": "int64",
-         "type": "integer"
-        },
-        {
-         "name": "NumCatalogPurchases",
-         "rawType": "int64",
-         "type": "integer"
-        },
-        {
-         "name": "NumStorePurchases",
-         "rawType": "int64",
-         "type": "integer"
-        },
-        {
-         "name": "NumWebVisitsMonth",
-         "rawType": "int64",
-         "type": "integer"
-        },
-        {
-         "name": "AcceptedCmp3",
-         "rawType": "int64",
-         "type": "integer"
-        },
-        {
-         "name": "AcceptedCmp4",
-         "rawType": "int64",
-         "type": "integer"
-        },
-        {
-         "name": "AcceptedCmp5",
-         "rawType": "int64",
-         "type": "integer"
-        },
-        {
-         "name": "AcceptedCmp1",
-         "rawType": "int64",
-         "type": "integer"
-        },
-        {
-         "name": "AcceptedCmp2",
-         "rawType": "int64",
-         "type": "integer"
-        },
-        {
-         "name": "Response",
-         "rawType": "int64",
-         "type": "integer"
-        },
-        {
-         "name": "Complain",
-         "rawType": "int64",
-         "type": "integer"
-        },
-        {
-         "name": "Country",
-         "rawType": "object",
-         "type": "string"
-        }
-       ],
-       "ref": "56b29c29-a7ab-43bb-8bff-9e34b0dd41ff",
-       "rows": [
-        [
-         "134",
-         "8996",
-         "1957",
-         "PhD",
-         "Married",
-         null,
-         "2",
-         "1",
-         "11/19/12",
-         "4",
-         "230",
-         "42",
-         "192",
-         "49",
-         "37",
-         "53",
-         "12",
-         "7",
-         "2",
-         "8",
-         "9",
-         "0",
-         "0",
-         "0",
-         "0",
-         "0",
-         "0",
-         "0",
-         "GER"
-        ],
-        [
-         "262",
-         "1994",
-         "1983",
-         "Graduation",
-         "Married",
-         null,
-         "1",
-         "0",
-         "11/15/13",
-         "11",
-         "5",
-         "5",
-         "6",
-         "0",
-         "2",
-         "1",
-         "1",
-         "1",
-         "0",
-         "2",
-         "7",
-         "0",
-         "0",
-         "0",
-         "0",
-         "0",
-         "0",
-         "0",
-         "US"
-        ],
-        [
-         "394",
-         "3769",
-         "1972",
-         "PhD",
-         "Together",
-         null,
-         "1",
-         "0",
-         "3/2/14",
-         "17",
-         "25",
-         "1",
-         "13",
-         "0",
-         "0",
-         "3",
-         "1",
-         "1",
-         "0",
-         "3",
-         "7",
-         "0",
-         "0",
-         "0",
-         "0",
-         "0",
-         "0",
-         "0",
-         "AUS"
-        ],
-        [
-         "449",
-         "5255",
-         "1986",
-         "Graduation",
-         "Single",
-         null,
-         "1",
-         "0",
-         "2/20/13",
-         "19",
-         "5",
-         "1",
-         "3",
-         "3",
-         "263",
-         "362",
-         "0",
-         "27",
-         "0",
-         "0",
-         "1",
-         "0",
-         "0",
-         "0",
-         "0",
-         "0",
-         "0",
-         "0",
-         "AUS"
-        ],
-        [
-         "525",
-         "8268",
-         "1961",
-         "PhD",
-         "Married",
-         null,
-         "0",
-         "1",
-         "7/11/13",
-         "23",
-         "352",
-         "0",
-         "27",
-         "10",
-         "0",
-         "15",
-         "3",
-         "6",
-         "1",
-         "7",
-         "6",
-         "0",
-         "0",
-         "0",
-         "0",
-         "0",
-         "0",
-         "0",
-         "CA"
-        ]
-       ],
-       "shape": {
-        "columns": 28,
-        "rows": 5
-       }
-      },
       "text/html": [
        "<div>\n",
        "<style scoped>\n",
@@ -628,6 +336,12 @@
     "colab": {
      "base_uri": "https://localhost:8080/"
     },
+    "execution": {
+     "iopub.execute_input": "2025-09-06T21:00:33.671721Z",
+     "iopub.status.busy": "2025-09-06T21:00:33.671721Z",
+     "iopub.status.idle": "2025-09-06T21:00:33.684718Z",
+     "shell.execute_reply": "2025-09-06T21:00:33.684718Z"
+    },
     "executionInfo": {
      "elapsed": 31,
      "status": "ok",
@@ -667,6 +381,12 @@
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
+    },
+    "execution": {
+     "iopub.execute_input": "2025-09-06T21:00:33.687721Z",
+     "iopub.status.busy": "2025-09-06T21:00:33.686721Z",
+     "iopub.status.idle": "2025-09-06T21:00:33.701720Z",
+     "shell.execute_reply": "2025-09-06T21:00:33.700719Z"
     },
     "executionInfo": {
      "elapsed": 43,
@@ -714,6 +434,12 @@
    "execution_count": 6,
    "id": "02cd6986",
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-09-06T21:00:33.703719Z",
+     "iopub.status.busy": "2025-09-06T21:00:33.702720Z",
+     "iopub.status.idle": "2025-09-06T21:00:33.716718Z",
+     "shell.execute_reply": "2025-09-06T21:00:33.716718Z"
+    },
     "executionInfo": {
      "elapsed": 24,
      "status": "ok",
@@ -739,6 +465,12 @@
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
+    },
+    "execution": {
+     "iopub.execute_input": "2025-09-06T21:00:33.719721Z",
+     "iopub.status.busy": "2025-09-06T21:00:33.718720Z",
+     "iopub.status.idle": "2025-09-06T21:00:33.732718Z",
+     "shell.execute_reply": "2025-09-06T21:00:33.732718Z"
     },
     "executionInfo": {
      "elapsed": 259,
@@ -795,6 +527,12 @@
     "colab": {
      "base_uri": "https://localhost:8080/"
     },
+    "execution": {
+     "iopub.execute_input": "2025-09-06T21:00:33.734720Z",
+     "iopub.status.busy": "2025-09-06T21:00:33.734720Z",
+     "iopub.status.idle": "2025-09-06T21:00:33.749720Z",
+     "shell.execute_reply": "2025-09-06T21:00:33.748718Z"
+    },
     "executionInfo": {
      "elapsed": 171,
      "status": "ok",
@@ -835,6 +573,12 @@
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
+    },
+    "execution": {
+     "iopub.execute_input": "2025-09-06T21:00:33.751718Z",
+     "iopub.status.busy": "2025-09-06T21:00:33.751718Z",
+     "iopub.status.idle": "2025-09-06T21:00:33.764718Z",
+     "shell.execute_reply": "2025-09-06T21:00:33.764718Z"
     },
     "executionInfo": {
      "elapsed": 122,
@@ -891,6 +635,12 @@
     "colab": {
      "base_uri": "https://localhost:8080/"
     },
+    "execution": {
+     "iopub.execute_input": "2025-09-06T21:00:33.767720Z",
+     "iopub.status.busy": "2025-09-06T21:00:33.766720Z",
+     "iopub.status.idle": "2025-09-06T21:00:33.781721Z",
+     "shell.execute_reply": "2025-09-06T21:00:33.780718Z"
+    },
     "executionInfo": {
      "elapsed": 67,
      "status": "ok",
@@ -934,6 +684,12 @@
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
+    },
+    "execution": {
+     "iopub.execute_input": "2025-09-06T21:00:33.783721Z",
+     "iopub.status.busy": "2025-09-06T21:00:33.782720Z",
+     "iopub.status.idle": "2025-09-06T21:00:33.796719Z",
+     "shell.execute_reply": "2025-09-06T21:00:33.796719Z"
     },
     "executionInfo": {
      "elapsed": 44,
@@ -987,6 +743,12 @@
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
+    },
+    "execution": {
+     "iopub.execute_input": "2025-09-06T21:00:33.799719Z",
+     "iopub.status.busy": "2025-09-06T21:00:33.798720Z",
+     "iopub.status.idle": "2025-09-06T21:00:33.828718Z",
+     "shell.execute_reply": "2025-09-06T21:00:33.828718Z"
     },
     "executionInfo": {
      "elapsed": 44,
@@ -1045,7 +807,14 @@
    "cell_type": "code",
    "execution_count": 13,
    "id": "0f988916",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-09-06T21:00:33.831721Z",
+     "iopub.status.busy": "2025-09-06T21:00:33.830721Z",
+     "iopub.status.idle": "2025-09-06T21:00:33.844721Z",
+     "shell.execute_reply": "2025-09-06T21:00:33.844721Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
