--- a/04_step_2_missing_value_imputation.ipynb
+++ b/04_step_2_missing_value_imputation.ipynb
@@ -16,7 +16,14 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "c06dde7a",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-09-06T21:00:39.819435Z",
+     "iopub.status.busy": "2025-09-06T21:00:39.818906Z",
+     "iopub.status.idle": "2025-09-06T21:00:41.533189Z",
+     "shell.execute_reply": "2025-09-06T21:00:41.533189Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Setup and data loading\n",
@@ -32,7 +39,14 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "c5c12d23",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-09-06T21:00:41.536188Z",
+     "iopub.status.busy": "2025-09-06T21:00:41.536188Z",
+     "iopub.status.idle": "2025-09-06T21:00:41.550189Z",
+     "shell.execute_reply": "2025-09-06T21:00:41.549187Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -58,6 +72,12 @@
    "execution_count": 3,
    "id": "427bf639",
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-09-06T21:00:41.552190Z",
+     "iopub.status.busy": "2025-09-06T21:00:41.552190Z",
+     "iopub.status.idle": "2025-09-06T21:00:41.642186Z",
+     "shell.execute_reply": "2025-09-06T21:00:41.642186Z"
+    },
     "executionInfo": {
      "elapsed": 311,
      "status": "ok",
@@ -91,6 +111,12 @@
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
+    },
+    "execution": {
+     "iopub.execute_input": "2025-09-06T21:00:41.645189Z",
+     "iopub.status.busy": "2025-09-06T21:00:41.645189Z",
+     "iopub.status.idle": "2025-09-06T21:00:41.657187Z",
+     "shell.execute_reply": "2025-09-06T21:00:41.657187Z"
     },
     "executionInfo": {
      "elapsed": 51,
@@ -140,6 +166,12 @@
     "colab": {
      "base_uri": "https://localhost:8080/"
     },
+    "execution": {
+     "iopub.execute_input": "2025-09-06T21:00:41.660190Z",
+     "iopub.status.busy": "2025-09-06T21:00:41.659189Z",
+     "iopub.status.idle": "2025-09-06T21:00:41.672188Z",
+     "shell.execute_reply": "2025-09-06T21:00:41.672188Z"
+    },
     "executionInfo": {
      "elapsed": 64,
      "status": "ok",
@@ -183,7 +215,14 @@
    "cell_type": "code",
    "execution_count": 6,
    "id": "dea82c29",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-09-06T21:00:41.674189Z",
+     "iopub.status.busy": "2025-09-06T21:00:41.674189Z",
+     "iopub.status.idle": "2025-09-06T21:00:41.688190Z",
+     "shell.execute_reply": "2025-09-06T21:00:41.687188Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
