--- a/05_step_3_feature_engineering.ipynb
+++ b/05_step_3_feature_engineering.ipynb
@@ -16,7 +16,14 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "3648e7c5",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-09-06T21:00:47.582877Z",
+     "iopub.status.busy": "2025-09-06T21:00:47.581877Z",
+     "iopub.status.idle": "2025-09-06T21:00:49.373213Z",
+     "shell.execute_reply": "2025-09-06T21:00:49.371689Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Setup and data loading\n",
@@ -32,6 +39,12 @@
    "execution_count": 2,
    "id": "dc0fbafc",
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-09-06T21:00:49.376211Z",
+     "iopub.status.busy": "2025-09-06T21:00:49.376211Z",
+     "iopub.status.idle": "2025-09-06T21:00:49.482215Z",
+     "shell.execute_reply": "2025-09-06T21:00:49.481212Z"
+    },
     "executionInfo": {
      "elapsed": 71,
      "status": "ok",
@@ -59,7 +72,14 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "043200a4",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-09-06T21:00:49.486210Z",
+     "iopub.status.busy": "2025-09-06T21:00:49.485214Z",
+     "iopub.status.idle": "2025-09-06T21:00:49.512213Z",
+     "shell.execute_reply": "2025-09-06T21:00:49.511211Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
