--- a/06_step_4_visualizations_box_plots_histograms_and_den.ipynb
+++ b/06_step_4_visualizations_box_plots_histograms_and_den.ipynb
@@ -16,7 +16,14 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "84230957",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-09-06T21:00:55.206762Z",
+     "iopub.status.busy": "2025-09-06T21:00:55.205763Z",
+     "iopub.status.idle": "2025-09-06T21:00:57.176579Z",
+     "shell.execute_reply": "2025-09-06T21:00:57.175581Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Setup and data loading\n",
@@ -49,6 +56,12 @@
    "execution_count": 2,
    "id": "83f38afc",
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-09-06T21:00:57.179580Z",
+     "iopub.status.busy": "2025-09-06T21:00:57.179580Z",
+     "iopub.status.idle": "2025-09-06T21:00:57.191579Z",
+     "shell.execute_reply": "2025-09-06T21:00:57.190582Z"
+    },
     "executionInfo": {
      "elapsed": 58,
      "status": "ok",
@@ -69,12 +82,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "22ed7cf3",
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
      "height": 0
+    },
+    "execution": {
+     "iopub.execute_input": "2025-09-06T21:00:57.194581Z",
+     "iopub.status.busy": "2025-09-06T21:00:57.193580Z",
+     "iopub.status.idle": "2025-09-06T21:00:59.143052Z",
+     "shell.execute_reply": "2025-09-06T21:00:59.142057Z"
     },
     "executionInfo": {
      "elapsed": 338,
@@ -142,6 +161,12 @@
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
+    },
+    "execution": {
+     "iopub.execute_input": "2025-09-06T21:00:59.145053Z",
+     "iopub.status.busy": "2025-09-06T21:00:59.145053Z",
+     "iopub.status.idle": "2025-09-06T21:00:59.173051Z",
+     "shell.execute_reply": "2025-09-06T21:00:59.172052Z"
     },
     "executionInfo": {
      "elapsed": 35,
@@ -252,6 +277,12 @@
    "execution_count": 5,
    "id": "a600895e",
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-09-06T21:00:59.175053Z",
+     "iopub.status.busy": "2025-09-06T21:00:59.174053Z",
+     "iopub.status.idle": "2025-09-06T21:00:59.187050Z",
+     "shell.execute_reply": "2025-09-06T21:00:59.187050Z"
+    },
     "executionInfo": {
      "elapsed": 56,
      "status": "ok",
@@ -305,6 +336,12 @@
     "colab": {
      "base_uri": "https://localhost:8080/",
      "height": 0
+    },
+    "execution": {
+     "iopub.execute_input": "2025-09-06T21:00:59.190052Z",
+     "iopub.status.busy": "2025-09-06T21:00:59.189052Z",
+     "iopub.status.idle": "2025-09-06T21:01:00.832930Z",
+     "shell.execute_reply": "2025-09-06T21:01:00.831931Z"
     },
     "executionInfo": {
      "elapsed": 1216,
@@ -367,14 +404,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "e8789974",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-09-06T21:01:00.834932Z",
+     "iopub.status.busy": "2025-09-06T21:01:00.834932Z",
+     "iopub.status.idle": "2025-09-06T21:01:00.953933Z",
+     "shell.execute_reply": "2025-09-06T21:01:00.952929Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "\n",
+      "Median Income Pivot Table:\n",
+      "Education       Bachelor   Master      PhD  Secondary\n",
+      "Marital_Status                                       \n",
+      "Divorced         55599.0  49476.0  50613.5     9548.0\n",
+      "Married          50737.0  50017.0  57072.0    22352.0\n",
+      "Single           49973.5  49514.0  48918.0    16383.0\n",
+      "Together         53977.0  47586.5  56575.0    23179.0\n",
+      "Widow            58275.0  51459.5  57032.0    22123.0\n",
       "\n",
       "Median Income Pivot Table:\n",
       "Education       Bachelor   Master      PhD  Secondary\n",
@@ -408,7 +461,14 @@
    "cell_type": "code",
    "execution_count": 8,
    "id": "127dd675",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-09-06T21:01:00.955933Z",
+     "iopub.status.busy": "2025-09-06T21:01:00.955933Z",
+     "iopub.status.idle": "2025-09-06T21:01:00.968933Z",
+     "shell.execute_reply": "2025-09-06T21:01:00.967929Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
