--- a/07_step_5_encoding_categorical_variables.ipynb
+++ b/07_step_5_encoding_categorical_variables.ipynb
@@ -14,9 +14,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "c136a72a",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-09-06T21:01:07.331599Z",
+     "iopub.status.busy": "2025-09-06T21:01:07.331599Z",
+     "iopub.status.idle": "2025-09-06T21:01:09.038096Z",
+     "shell.execute_reply": "2025-09-06T21:01:09.038096Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Setup and data loading\n",
@@ -30,9 +37,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "bd4c0a82",
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-09-06T21:01:09.041099Z",
+     "iopub.status.busy": "2025-09-06T21:01:09.041099Z",
+     "iopub.status.idle": "2025-09-06T21:01:09.114096Z",
+     "shell.execute_reply": "2025-09-06T21:01:09.114096Z"
+    },
     "executionInfo": {
      "elapsed": 151,
      "status": "ok",
@@ -61,11 +74,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "e1bfc6e8",
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
+    },
+    "execution": {
+     "iopub.execute_input": "2025-09-06T21:01:09.117098Z",
+     "iopub.status.busy": "2025-09-06T21:01:09.116098Z",
+     "iopub.status.idle": "2025-09-06T21:01:09.130099Z",
+     "shell.execute_reply": "2025-09-06T21:01:09.129100Z"
     },
     "executionInfo": {
      "elapsed": 130,
@@ -98,7 +117,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -109,9 +128,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "f8630e25",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-09-06T21:01:09.133101Z",
+     "iopub.status.busy": "2025-09-06T21:01:09.133101Z",
+     "iopub.status.idle": "2025-09-06T21:01:09.144097Z",
+     "shell.execute_reply": "2025-09-06T21:01:09.144097Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
