--- a/10_older_individuals_prefer_in_store_shopping.ipynb
+++ b/10_older_individuals_prefer_in_store_shopping.ipynb
@@ -16,7 +16,14 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "a379b6cd",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-09-06T21:01:34.583091Z",
+     "iopub.status.busy": "2025-09-06T21:01:34.583091Z",
+     "iopub.status.idle": "2025-09-06T21:01:36.358270Z",
+     "shell.execute_reply": "2025-09-06T21:01:36.357269Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Setup and data loading\n",
@@ -49,6 +56,12 @@
    "execution_count": 2,
    "id": "dc27aea2",
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-09-06T21:01:36.360268Z",
+     "iopub.status.busy": "2025-09-06T21:01:36.360268Z",
+     "iopub.status.idle": "2025-09-06T21:01:36.373853Z",
+     "shell.execute_reply": "2025-09-06T21:01:36.373345Z"
+    },
     "executionInfo": {
      "elapsed": 24,
      "status": "ok",
@@ -87,6 +100,12 @@
    "execution_count": 3,
    "id": "04159b43",
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-09-06T21:01:36.375862Z",
+     "iopub.status.busy": "2025-09-06T21:01:36.375862Z",
+     "iopub.status.idle": "2025-09-06T21:01:36.389864Z",
+     "shell.execute_reply": "2025-09-06T21:01:36.388860Z"
+    },
     "executionInfo": {
      "elapsed": 52,
      "status": "ok",
@@ -114,6 +133,12 @@
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
+    },
+    "execution": {
+     "iopub.execute_input": "2025-09-06T21:01:36.391862Z",
+     "iopub.status.busy": "2025-09-06T21:01:36.391862Z",
+     "iopub.status.idle": "2025-09-06T21:01:36.469864Z",
+     "shell.execute_reply": "2025-09-06T21:01:36.468861Z"
     },
     "executionInfo": {
      "elapsed": 84,
@@ -165,6 +190,12 @@
     "colab": {
      "base_uri": "https://localhost:8080/",
      "height": 0
+    },
+    "execution": {
+     "iopub.execute_input": "2025-09-06T21:01:36.472864Z",
+     "iopub.status.busy": "2025-09-06T21:01:36.471864Z",
+     "iopub.status.idle": "2025-09-06T21:01:37.116863Z",
+     "shell.execute_reply": "2025-09-06T21:01:37.115861Z"
     },
     "executionInfo": {
      "elapsed": 426,
@@ -257,6 +288,12 @@
     "colab": {
      "base_uri": "https://localhost:8080/"
     },
+    "execution": {
+     "iopub.execute_input": "2025-09-06T21:01:37.118862Z",
+     "iopub.status.busy": "2025-09-06T21:01:37.118862Z",
+     "iopub.status.idle": "2025-09-06T21:01:37.131862Z",
+     "shell.execute_reply": "2025-09-06T21:01:37.130863Z"
+    },
     "executionInfo": {
      "elapsed": 91,
      "status": "ok",
@@ -308,6 +345,12 @@
     "colab": {
      "base_uri": "https://localhost:8080/"
     },
+    "execution": {
+     "iopub.execute_input": "2025-09-06T21:01:37.133863Z",
+     "iopub.status.busy": "2025-09-06T21:01:37.133863Z",
+     "iopub.status.idle": "2025-09-06T21:01:37.146864Z",
+     "shell.execute_reply": "2025-09-06T21:01:37.145861Z"
+    },
     "executionInfo": {
      "elapsed": 70,
      "status": "ok",
@@ -352,6 +395,12 @@
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
+    },
+    "execution": {
+     "iopub.execute_input": "2025-09-06T21:01:37.148863Z",
+     "iopub.status.busy": "2025-09-06T21:01:37.147863Z",
+     "iopub.status.idle": "2025-09-06T21:01:37.162864Z",
+     "shell.execute_reply": "2025-09-06T21:01:37.161862Z"
     },
     "executionInfo": {
      "elapsed": 41,
@@ -409,6 +458,12 @@
     "colab": {
      "base_uri": "https://localhost:8080/"
     },
+    "execution": {
+     "iopub.execute_input": "2025-09-06T21:01:37.164863Z",
+     "iopub.status.busy": "2025-09-06T21:01:37.164863Z",
+     "iopub.status.idle": "2025-09-06T21:01:37.178861Z",
+     "shell.execute_reply": "2025-09-06T21:01:37.177865Z"
+    },
     "executionInfo": {
      "elapsed": 22,
      "status": "ok",
@@ -454,6 +509,12 @@
    "execution_count": 10,
    "id": "d026dc3a",
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-09-06T21:01:37.181863Z",
+     "iopub.status.busy": "2025-09-06T21:01:37.180861Z",
+     "iopub.status.idle": "2025-09-06T21:01:37.194865Z",
+     "shell.execute_reply": "2025-09-06T21:01:37.193861Z"
+    },
     "executionInfo": {
      "elapsed": 12,
      "status": "ok",
@@ -477,7 +538,14 @@
    "cell_type": "code",
    "execution_count": 11,
    "id": "49b4d0f3",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-09-06T21:01:37.196864Z",
+     "iopub.status.busy": "2025-09-06T21:01:37.196864Z",
+     "iopub.status.idle": "2025-09-06T21:01:37.210862Z",
+     "shell.execute_reply": "2025-09-06T21:01:37.209862Z"
+    }
+   },
    "outputs": [],
    "source": [
     "\n",
