--- a/11_customers_with_children_prefer_online_shopping.ipynb
+++ b/11_customers_with_children_prefer_online_shopping.ipynb
@@ -16,7 +16,14 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "6e990666",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-09-06T21:01:43.354274Z",
+     "iopub.status.busy": "2025-09-06T21:01:43.354274Z",
+     "iopub.status.idle": "2025-09-06T21:01:45.646779Z",
+     "shell.execute_reply": "2025-09-06T21:01:45.644779Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Setup and data loading\n",
@@ -52,6 +59,12 @@
    "execution_count": 2,
    "id": "ccbdc85b",
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-09-06T21:01:45.649779Z",
+     "iopub.status.busy": "2025-09-06T21:01:45.648779Z",
+     "iopub.status.idle": "2025-09-06T21:01:45.661779Z",
+     "shell.execute_reply": "2025-09-06T21:01:45.660779Z"
+    },
     "executionInfo": {
      "elapsed": 19,
      "status": "ok",
@@ -90,6 +103,12 @@
    "execution_count": 3,
    "id": "31df2bcd",
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-09-06T21:01:45.665781Z",
+     "iopub.status.busy": "2025-09-06T21:01:45.664779Z",
+     "iopub.status.idle": "2025-09-06T21:01:45.677780Z",
+     "shell.execute_reply": "2025-09-06T21:01:45.676780Z"
+    },
     "executionInfo": {
      "elapsed": 66,
      "status": "ok",
@@ -117,6 +136,12 @@
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
+    },
+    "execution": {
+     "iopub.execute_input": "2025-09-06T21:01:45.680778Z",
+     "iopub.status.busy": "2025-09-06T21:01:45.679779Z",
+     "iopub.status.idle": "2025-09-06T21:01:45.786779Z",
+     "shell.execute_reply": "2025-09-06T21:01:45.785776Z"
     },
     "executionInfo": {
      "elapsed": 52,
@@ -168,6 +193,12 @@
     "colab": {
      "base_uri": "https://localhost:8080/",
      "height": 0
+    },
+    "execution": {
+     "iopub.execute_input": "2025-09-06T21:01:45.789779Z",
+     "iopub.status.busy": "2025-09-06T21:01:45.789779Z",
+     "iopub.status.idle": "2025-09-06T21:01:46.470778Z",
+     "shell.execute_reply": "2025-09-06T21:01:46.469779Z"
     },
     "executionInfo": {
      "elapsed": 120,
@@ -261,6 +292,12 @@
     "colab": {
      "base_uri": "https://localhost:8080/"
     },
+    "execution": {
+     "iopub.execute_input": "2025-09-06T21:01:46.472780Z",
+     "iopub.status.busy": "2025-09-06T21:01:46.472780Z",
+     "iopub.status.idle": "2025-09-06T21:01:46.486778Z",
+     "shell.execute_reply": "2025-09-06T21:01:46.485776Z"
+    },
     "executionInfo": {
      "elapsed": 64,
      "status": "ok",
@@ -311,6 +348,12 @@
     "colab": {
      "base_uri": "https://localhost:8080/"
     },
+    "execution": {
+     "iopub.execute_input": "2025-09-06T21:01:46.488779Z",
+     "iopub.status.busy": "2025-09-06T21:01:46.488779Z",
+     "iopub.status.idle": "2025-09-06T21:01:46.502781Z",
+     "shell.execute_reply": "2025-09-06T21:01:46.501777Z"
+    },
     "executionInfo": {
      "elapsed": 48,
      "status": "ok",
@@ -355,6 +398,12 @@
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
+    },
+    "execution": {
+     "iopub.execute_input": "2025-09-06T21:01:46.504779Z",
+     "iopub.status.busy": "2025-09-06T21:01:46.504779Z",
+     "iopub.status.idle": "2025-09-06T21:01:46.518780Z",
+     "shell.execute_reply": "2025-09-06T21:01:46.517781Z"
     },
     "executionInfo": {
      "elapsed": 24,
@@ -412,6 +461,12 @@
     "colab": {
      "base_uri": "https://localhost:8080/"
     },
+    "execution": {
+     "iopub.execute_input": "2025-09-06T21:01:46.521779Z",
+     "iopub.status.busy": "2025-09-06T21:01:46.520779Z",
+     "iopub.status.idle": "2025-09-06T21:01:46.533778Z",
+     "shell.execute_reply": "2025-09-06T21:01:46.532780Z"
+    },
     "executionInfo": {
      "elapsed": 31,
      "status": "ok",
@@ -457,6 +512,12 @@
    "execution_count": 10,
    "id": "9a598813",
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-09-06T21:01:46.535779Z",
+     "iopub.status.busy": "2025-09-06T21:01:46.535779Z",
+     "iopub.status.idle": "2025-09-06T21:01:46.548779Z",
+     "shell.execute_reply": "2025-09-06T21:01:46.547777Z"
+    },
     "executionInfo": {
      "elapsed": 25,
      "status": "ok",
@@ -480,7 +541,14 @@
    "cell_type": "code",
    "execution_count": 11,
    "id": "1a661e40",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-09-06T21:01:46.551779Z",
+     "iopub.status.busy": "2025-09-06T21:01:46.550779Z",
+     "iopub.status.idle": "2025-09-06T21:01:46.564778Z",
+     "shell.execute_reply": "2025-09-06T21:01:46.563777Z"
+    }
+   },
    "outputs": [],
    "source": [
     "\n",
