--- a/15_identify_the_top_performing_products_and_those_wit.ipynb
+++ b/15_identify_the_top_performing_products_and_those_wit.ipynb
@@ -16,7 +16,14 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "1bf51dc3",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-09-06T21:02:22.326453Z",
+     "iopub.status.busy": "2025-09-06T21:02:22.325452Z",
+     "iopub.status.idle": "2025-09-06T21:02:23.981304Z",
+     "shell.execute_reply": "2025-09-06T21:02:23.980298Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Setup and data loading\n",
@@ -47,12 +54,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "d80f69df",
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
      "height": 0
+    },
+    "execution": {
+     "iopub.execute_input": "2025-09-06T21:02:23.984302Z",
+     "iopub.status.busy": "2025-09-06T21:02:23.984302Z",
+     "iopub.status.idle": "2025-09-06T21:02:24.470783Z",
+     "shell.execute_reply": "2025-09-06T21:02:24.470228Z"
     },
     "executionInfo": {
      "elapsed": 441,
@@ -120,6 +133,12 @@
     "colab": {
      "base_uri": "https://localhost:8080/"
     },
+    "execution": {
+     "iopub.execute_input": "2025-09-06T21:02:24.473325Z",
+     "iopub.status.busy": "2025-09-06T21:02:24.473325Z",
+     "iopub.status.idle": "2025-09-06T21:02:24.486326Z",
+     "shell.execute_reply": "2025-09-06T21:02:24.485325Z"
+    },
     "executionInfo": {
      "elapsed": 78,
      "status": "ok",
@@ -164,7 +183,14 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "09888735",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-09-06T21:02:24.489324Z",
+     "iopub.status.busy": "2025-09-06T21:02:24.488326Z",
+     "iopub.status.idle": "2025-09-06T21:02:24.501441Z",
+     "shell.execute_reply": "2025-09-06T21:02:24.500362Z"
+    }
+   },
    "outputs": [],
    "source": [
     "\n",
