--- a/16_examine_if_there_is_a_correlation_between_customer.ipynb
+++ b/16_examine_if_there_is_a_correlation_between_customer.ipynb
@@ -15,7 +15,14 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "bf0f2d23",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-09-06T21:02:33.201589Z",
+     "iopub.status.busy": "2025-09-06T21:02:33.200589Z",
+     "iopub.status.idle": "2025-09-06T21:02:34.865230Z",
+     "shell.execute_reply": "2025-09-06T21:02:34.864229Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Setup and data loading\n",
@@ -54,6 +61,12 @@
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
+    },
+    "execution": {
+     "iopub.execute_input": "2025-09-06T21:02:34.867231Z",
+     "iopub.status.busy": "2025-09-06T21:02:34.867231Z",
+     "iopub.status.idle": "2025-09-06T21:02:34.879229Z",
+     "shell.execute_reply": "2025-09-06T21:02:34.879229Z"
     },
     "executionInfo": {
      "elapsed": 121,
@@ -106,6 +119,12 @@
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
+    },
+    "execution": {
+     "iopub.execute_input": "2025-09-06T21:02:34.882232Z",
+     "iopub.status.busy": "2025-09-06T21:02:34.882232Z",
+     "iopub.status.idle": "2025-09-06T21:02:34.956229Z",
+     "shell.execute_reply": "2025-09-06T21:02:34.956229Z"
     },
     "executionInfo": {
      "elapsed": 56,
@@ -183,6 +202,12 @@
     "colab": {
      "base_uri": "https://localhost:8080/",
      "height": 0
+    },
+    "execution": {
+     "iopub.execute_input": "2025-09-06T21:02:34.959232Z",
+     "iopub.status.busy": "2025-09-06T21:02:34.958231Z",
+     "iopub.status.idle": "2025-09-06T21:02:35.692667Z",
+     "shell.execute_reply": "2025-09-06T21:02:35.691667Z"
     },
     "executionInfo": {
      "elapsed": 230,
@@ -298,6 +323,12 @@
    "execution_count": 5,
    "id": "b90670e1",
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-09-06T21:02:35.694666Z",
+     "iopub.status.busy": "2025-09-06T21:02:35.694666Z",
+     "iopub.status.idle": "2025-09-06T21:02:35.706667Z",
+     "shell.execute_reply": "2025-09-06T21:02:35.706667Z"
+    },
     "executionInfo": {
      "elapsed": 16,
      "status": "ok",
@@ -329,6 +360,12 @@
     "colab": {
      "base_uri": "https://localhost:8080/",
      "height": 0
+    },
+    "execution": {
+     "iopub.execute_input": "2025-09-06T21:02:35.709670Z",
+     "iopub.status.busy": "2025-09-06T21:02:35.708670Z",
+     "iopub.status.idle": "2025-09-06T21:02:36.346925Z",
+     "shell.execute_reply": "2025-09-06T21:02:36.346925Z"
     },
     "executionInfo": {
      "elapsed": 138,
@@ -362,7 +399,20 @@
       "40-50                    Large  \n",
       "50-60                    Large  \n",
       "60-70                   Medium  \n",
-      "70+                      Small  \n",
+      "70+                      Small  "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Saved: figures\\Age_Distribution_by_Campaign_Response_Significance.png\n"
      ]
     },
@@ -463,6 +513,12 @@
     "colab": {
      "base_uri": "https://localhost:8080/"
     },
+    "execution": {
+     "iopub.execute_input": "2025-09-06T21:02:36.349927Z",
+     "iopub.status.busy": "2025-09-06T21:02:36.348926Z",
+     "iopub.status.idle": "2025-09-06T21:02:36.363526Z",
+     "shell.execute_reply": "2025-09-06T21:02:36.363019Z"
+    },
     "executionInfo": {
      "elapsed": 487,
      "status": "ok",
@@ -504,6 +560,12 @@
    "execution_count": 8,
    "id": "d5b2ee96",
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-09-06T21:02:36.365533Z",
+     "iopub.status.busy": "2025-09-06T21:02:36.365533Z",
+     "iopub.status.idle": "2025-09-06T21:02:36.379109Z",
+     "shell.execute_reply": "2025-09-06T21:02:36.378598Z"
+    },
     "executionInfo": {
      "elapsed": 403,
      "status": "ok",
@@ -549,7 +611,14 @@
    "cell_type": "code",
    "execution_count": 9,
    "id": "08040a34",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-09-06T21:02:36.381117Z",
+     "iopub.status.busy": "2025-09-06T21:02:36.381117Z",
+     "iopub.status.idle": "2025-09-06T21:02:36.395117Z",
+     "shell.execute_reply": "2025-09-06T21:02:36.394117Z"
+    }
+   },
    "outputs": [],
    "source": [
     "\n",
