--- a/17_determine_the_country_with_the_highest_number_of_c.ipynb
+++ b/17_determine_the_country_with_the_highest_number_of_c.ipynb
@@ -16,7 +16,14 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "125789d1",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-09-06T21:02:42.420537Z",
+     "iopub.status.busy": "2025-09-06T21:02:42.419536Z",
+     "iopub.status.idle": "2025-09-06T21:02:44.138204Z",
+     "shell.execute_reply": "2025-09-06T21:02:44.137203Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Setup and data loading\n",
@@ -54,6 +61,12 @@
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
+    },
+    "execution": {
+     "iopub.execute_input": "2025-09-06T21:02:44.141204Z",
+     "iopub.status.busy": "2025-09-06T21:02:44.140204Z",
+     "iopub.status.idle": "2025-09-06T21:02:44.153205Z",
+     "shell.execute_reply": "2025-09-06T21:02:44.152202Z"
     },
     "executionInfo": {
      "elapsed": 397,
@@ -112,6 +125,12 @@
    "execution_count": 3,
    "id": "5d033a20",
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-09-06T21:02:44.155204Z",
+     "iopub.status.busy": "2025-09-06T21:02:44.155204Z",
+     "iopub.status.idle": "2025-09-06T21:02:44.230205Z",
+     "shell.execute_reply": "2025-09-06T21:02:44.229202Z"
+    },
     "executionInfo": {
      "elapsed": 79,
      "status": "ok",
@@ -155,6 +174,12 @@
    "execution_count": 4,
    "id": "afd97217",
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-09-06T21:02:44.232202Z",
+     "iopub.status.busy": "2025-09-06T21:02:44.232202Z",
+     "iopub.status.idle": "2025-09-06T21:02:44.244202Z",
+     "shell.execute_reply": "2025-09-06T21:02:44.244202Z"
+    },
     "executionInfo": {
      "elapsed": 49,
      "status": "ok",
@@ -215,6 +240,12 @@
     "colab": {
      "base_uri": "https://localhost:8080/"
     },
+    "execution": {
+     "iopub.execute_input": "2025-09-06T21:02:44.247205Z",
+     "iopub.status.busy": "2025-09-06T21:02:44.246204Z",
+     "iopub.status.idle": "2025-09-06T21:02:44.260202Z",
+     "shell.execute_reply": "2025-09-06T21:02:44.260202Z"
+    },
     "executionInfo": {
      "elapsed": 56,
      "status": "ok",
@@ -257,6 +288,12 @@
     "colab": {
      "base_uri": "https://localhost:8080/",
      "height": 0
+    },
+    "execution": {
+     "iopub.execute_input": "2025-09-06T21:02:44.262204Z",
+     "iopub.status.busy": "2025-09-06T21:02:44.262204Z",
+     "iopub.status.idle": "2025-09-06T21:02:45.844836Z",
+     "shell.execute_reply": "2025-09-06T21:02:45.844836Z"
     },
     "executionInfo": {
      "elapsed": 1391,
@@ -434,6 +471,12 @@
     "colab": {
      "base_uri": "https://localhost:8080/"
     },
+    "execution": {
+     "iopub.execute_input": "2025-09-06T21:02:45.847839Z",
+     "iopub.status.busy": "2025-09-06T21:02:45.846841Z",
+     "iopub.status.idle": "2025-09-06T21:02:45.859838Z",
+     "shell.execute_reply": "2025-09-06T21:02:45.859838Z"
+    },
     "executionInfo": {
      "elapsed": 46,
      "status": "ok",
@@ -506,6 +549,12 @@
    "execution_count": 8,
    "id": "5e57bba9",
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-09-06T21:02:45.862839Z",
+     "iopub.status.busy": "2025-09-06T21:02:45.861839Z",
+     "iopub.status.idle": "2025-09-06T21:02:45.875839Z",
+     "shell.execute_reply": "2025-09-06T21:02:45.874837Z"
+    },
     "executionInfo": {
      "elapsed": 45,
      "status": "ok",
@@ -541,6 +590,12 @@
    "execution_count": 9,
    "id": "d9918d61",
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-09-06T21:02:45.877838Z",
+     "iopub.status.busy": "2025-09-06T21:02:45.877838Z",
+     "iopub.status.idle": "2025-09-06T21:02:45.891840Z",
+     "shell.execute_reply": "2025-09-06T21:02:45.890839Z"
+    },
     "executionInfo": {
      "elapsed": 30,
      "status": "ok",
@@ -567,7 +622,14 @@
    "cell_type": "code",
    "execution_count": 10,
    "id": "45d79d40",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-09-06T21:02:45.893839Z",
+     "iopub.status.busy": "2025-09-06T21:02:45.893839Z",
+     "iopub.status.idle": "2025-09-06T21:02:45.907837Z",
+     "shell.execute_reply": "2025-09-06T21:02:45.906837Z"
+    }
+   },
    "outputs": [],
    "source": [
     "\n",
