--- a/19_analyze_the_educational_background_of_customers_wh.ipynb
+++ b/19_analyze_the_educational_background_of_customers_wh.ipynb
@@ -16,7 +16,14 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "0db600bc",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-09-06T21:03:01.497742Z",
+     "iopub.status.busy": "2025-09-06T21:03:01.497742Z",
+     "iopub.status.idle": "2025-09-06T21:03:03.170911Z",
+     "shell.execute_reply": "2025-09-06T21:03:03.170911Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Setup and data loading\n",
@@ -56,6 +63,12 @@
     "colab": {
      "base_uri": "https://localhost:8080/",
      "height": 625
+    },
+    "execution": {
+     "iopub.execute_input": "2025-09-06T21:03:03.173912Z",
+     "iopub.status.busy": "2025-09-06T21:03:03.173912Z",
+     "iopub.status.idle": "2025-09-06T21:03:04.559689Z",
+     "shell.execute_reply": "2025-09-06T21:03:04.558687Z"
     },
     "executionInfo": {
      "elapsed": 2327,
@@ -248,6 +261,12 @@
    "execution_count": 3,
    "id": "5b119679",
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-09-06T21:03:04.561688Z",
+     "iopub.status.busy": "2025-09-06T21:03:04.561688Z",
+     "iopub.status.idle": "2025-09-06T21:03:04.575690Z",
+     "shell.execute_reply": "2025-09-06T21:03:04.574691Z"
+    },
     "executionInfo": {
      "elapsed": 18,
      "status": "ok",
@@ -279,7 +298,14 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "7a847a1d",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-09-06T21:03:04.577690Z",
+     "iopub.status.busy": "2025-09-06T21:03:04.577690Z",
+     "iopub.status.idle": "2025-09-06T21:03:04.590687Z",
+     "shell.execute_reply": "2025-09-06T21:03:04.590687Z"
+    }
+   },
    "outputs": [],
    "source": [
     "\n",
