--- a/20_marketing_campaign_analysis_summary.ipynb
+++ b/20_marketing_campaign_analysis_summary.ipynb
@@ -376,7 +376,14 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "953e6e09-a2b0-46bf-aa52-a573cf0be600",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-09-06T21:03:10.537338Z",
+     "iopub.status.busy": "2025-09-06T21:03:10.537338Z",
+     "iopub.status.idle": "2025-09-06T21:03:10.548342Z",
+     "shell.execute_reply": "2025-09-06T21:03:10.547338Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# current_year = 2025\n",
