--- a/21_step_7_hypothesis_testing_summary.ipynb
+++ b/21_step_7_hypothesis_testing_summary.ipynb
@@ -705,9 +705,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "4b5d9eb4",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-09-06T21:03:18.656141Z",
+     "iopub.status.busy": "2025-09-06T21:03:18.656141Z",
+     "iopub.status.idle": "2025-09-06T21:03:18.665141Z",
+     "shell.execute_reply": "2025-09-06T21:03:18.665141Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# High and Low Users\n",
