--- a/13_us_versus_the_rest_of_the_world_in_total_purchases.ipynb
+++ b/13_us_versus_the_rest_of_the_world_in_total_purchases.ipynb
@@ -16,7 +16,14 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "83e2cd5c",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-09-06T21:02:08.437468Z",
+     "iopub.status.busy": "2025-09-06T21:02:08.437468Z",
+     "iopub.status.idle": "2025-09-06T21:02:10.129958Z",
+     "shell.execute_reply": "2025-09-06T21:02:10.129958Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Setup and data loading\n",
@@ -51,6 +58,12 @@
    "execution_count": 2,
    "id": "203a2cf6",
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-09-06T21:02:10.132959Z",
+     "iopub.status.busy": "2025-09-06T21:02:10.132959Z",
+     "iopub.status.idle": "2025-09-06T21:02:10.146959Z",
+     "shell.execute_reply": "2025-09-06T21:02:10.145960Z"
+    },
     "executionInfo": {
      "elapsed": 31,
      "status": "ok",
@@ -89,6 +102,12 @@
    "execution_count": 3,
    "id": "04e9e75b",
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-09-06T21:02:10.148960Z",
+     "iopub.status.busy": "2025-09-06T21:02:10.148960Z",
+     "iopub.status.idle": "2025-09-06T21:02:10.161958Z",
+     "shell.execute_reply": "2025-09-06T21:02:10.161958Z"
+    },
     "executionInfo": {
      "elapsed": 51,
      "status": "ok",
@@ -115,6 +134,12 @@
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
+    },
+    "execution": {
+     "iopub.execute_input": "2025-09-06T21:02:10.164960Z",
+     "iopub.status.busy": "2025-09-06T21:02:10.163960Z",
+     "iopub.status.idle": "2025-09-06T21:02:10.177958Z",
+     "shell.execute_reply": "2025-09-06T21:02:10.177958Z"
     },
     "executionInfo": {
      "elapsed": 33,
@@ -166,6 +191,12 @@
     "colab": {
      "base_uri": "https://localhost:8080/",
      "height": 0
+    },
+    "execution": {
+     "iopub.execute_input": "2025-09-06T21:02:10.180960Z",
+     "iopub.status.busy": "2025-09-06T21:02:10.179959Z",
+     "iopub.status.idle": "2025-09-06T21:02:10.831181Z",
+     "shell.execute_reply": "2025-09-06T21:02:10.831181Z"
     },
     "executionInfo": {
      "elapsed": 67,
@@ -255,6 +286,12 @@
     "colab": {
      "base_uri": "https://localhost:8080/"
     },
+    "execution": {
+     "iopub.execute_input": "2025-09-06T21:02:10.833182Z",
+     "iopub.status.busy": "2025-09-06T21:02:10.833182Z",
+     "iopub.status.idle": "2025-09-06T21:02:10.847183Z",
+     "shell.execute_reply": "2025-09-06T21:02:10.846179Z"
+    },
     "executionInfo": {
      "elapsed": 24,
      "status": "ok",
@@ -305,6 +342,12 @@
     "colab": {
      "base_uri": "https://localhost:8080/"
     },
+    "execution": {
+     "iopub.execute_input": "2025-09-06T21:02:10.849182Z",
+     "iopub.status.busy": "2025-09-06T21:02:10.849182Z",
+     "iopub.status.idle": "2025-09-06T21:02:10.862180Z",
+     "shell.execute_reply": "2025-09-06T21:02:10.861180Z"
+    },
     "executionInfo": {
      "elapsed": 29,
      "status": "ok",
@@ -349,6 +392,12 @@
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
+    },
+    "execution": {
+     "iopub.execute_input": "2025-09-06T21:02:10.864181Z",
+     "iopub.status.busy": "2025-09-06T21:02:10.864181Z",
+     "iopub.status.idle": "2025-09-06T21:02:10.876180Z",
+     "shell.execute_reply": "2025-09-06T21:02:10.876180Z"
     },
     "executionInfo": {
      "elapsed": 30,
@@ -406,6 +455,12 @@
     "colab": {
      "base_uri": "https://localhost:8080/"
     },
+    "execution": {
+     "iopub.execute_input": "2025-09-06T21:02:10.879180Z",
+     "iopub.status.busy": "2025-09-06T21:02:10.878179Z",
+     "iopub.status.idle": "2025-09-06T21:02:10.892180Z",
+     "shell.execute_reply": "2025-09-06T21:02:10.892180Z"
+    },
     "executionInfo": {
      "elapsed": 90,
      "status": "ok",
@@ -450,6 +505,12 @@
    "execution_count": 10,
    "id": "64260e0d",
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-09-06T21:02:10.895182Z",
+     "iopub.status.busy": "2025-09-06T21:02:10.894181Z",
+     "iopub.status.idle": "2025-09-06T21:02:10.909183Z",
+     "shell.execute_reply": "2025-09-06T21:02:10.908180Z"
+    },
     "executionInfo": {
      "elapsed": 59,
      "status": "ok",
@@ -473,7 +534,14 @@
    "cell_type": "code",
    "execution_count": 11,
    "id": "8ef7efce",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-09-06T21:02:10.911182Z",
+     "iopub.status.busy": "2025-09-06T21:02:10.911182Z",
+     "iopub.status.idle": "2025-09-06T21:02:10.925181Z",
+     "shell.execute_reply": "2025-09-06T21:02:10.924180Z"
+    }
+   },
    "outputs": [],
    "source": [
     "\n",
