--- a/16_examine_if_there_is_a_correlation_between_customer.ipynb
+++ b/16_examine_if_there_is_a_correlation_between_customer.ipynb
@@ -17,10 +17,10 @@
    "id": "bf0f2d23",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-09-06T21:02:33.201589Z",
-     "iopub.status.busy": "2025-09-06T21:02:33.200589Z",
-     "iopub.status.idle": "2025-09-06T21:02:34.865230Z",
-     "shell.execute_reply": "2025-09-06T21:02:34.864229Z"
+     "iopub.execute_input": "2025-09-06T21:13:40.056005Z",
+     "iopub.status.busy": "2025-09-06T21:13:40.056005Z",
+     "iopub.status.idle": "2025-09-06T21:13:41.766237Z",
+     "shell.execute_reply": "2025-09-06T21:13:41.765238Z"
     }
    },
    "outputs": [],
@@ -63,10 +63,10 @@
      "base_uri": "https://localhost:8080/"
     },
     "execution": {
-     "iopub.execute_input": "2025-09-06T21:02:34.867231Z",
-     "iopub.status.busy": "2025-09-06T21:02:34.867231Z",
-     "iopub.status.idle": "2025-09-06T21:02:34.879229Z",
-     "shell.execute_reply": "2025-09-06T21:02:34.879229Z"
+     "iopub.execute_input": "2025-09-06T21:13:41.769237Z",
+     "iopub.status.busy": "2025-09-06T21:13:41.769237Z",
+     "iopub.status.idle": "2025-09-06T21:13:41.781237Z",
+     "shell.execute_reply": "2025-09-06T21:13:41.780239Z"
     },
     "executionInfo": {
      "elapsed": 121,
@@ -121,10 +121,10 @@
      "base_uri": "https://localhost:8080/"
     },
     "execution": {
-     "iopub.execute_input": "2025-09-06T21:02:34.882232Z",
-     "iopub.status.busy": "2025-09-06T21:02:34.882232Z",
-     "iopub.status.idle": "2025-09-06T21:02:34.956229Z",
-     "shell.execute_reply": "2025-09-06T21:02:34.956229Z"
+     "iopub.execute_input": "2025-09-06T21:13:41.783237Z",
+     "iopub.status.busy": "2025-09-06T21:13:41.782237Z",
+     "iopub.status.idle": "2025-09-06T21:13:41.856237Z",
+     "shell.execute_reply": "2025-09-06T21:13:41.856237Z"
     },
     "executionInfo": {
      "elapsed": 56,
@@ -204,10 +204,10 @@
      "height": 0
     },
     "execution": {
-     "iopub.execute_input": "2025-09-06T21:02:34.959232Z",
-     "iopub.status.busy": "2025-09-06T21:02:34.958231Z",
-     "iopub.status.idle": "2025-09-06T21:02:35.692667Z",
-     "shell.execute_reply": "2025-09-06T21:02:35.691667Z"
+     "iopub.execute_input": "2025-09-06T21:13:41.859237Z",
+     "iopub.status.busy": "2025-09-06T21:13:41.858236Z",
+     "iopub.status.idle": "2025-09-06T21:13:42.587466Z",
+     "shell.execute_reply": "2025-09-06T21:13:42.586467Z"
     },
     "executionInfo": {
      "elapsed": 230,
@@ -324,10 +324,10 @@
    "id": "b90670e1",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-09-06T21:02:35.694666Z",
-     "iopub.status.busy": "2025-09-06T21:02:35.694666Z",
-     "iopub.status.idle": "2025-09-06T21:02:35.706667Z",
-     "shell.execute_reply": "2025-09-06T21:02:35.706667Z"
+     "iopub.execute_input": "2025-09-06T21:13:42.589466Z",
+     "iopub.status.busy": "2025-09-06T21:13:42.589466Z",
+     "iopub.status.idle": "2025-09-06T21:13:42.602469Z",
+     "shell.execute_reply": "2025-09-06T21:13:42.601467Z"
     },
     "executionInfo": {
      "elapsed": 16,
@@ -362,10 +362,10 @@
      "height": 0
     },
     "execution": {
-     "iopub.execute_input": "2025-09-06T21:02:35.709670Z",
-     "iopub.status.busy": "2025-09-06T21:02:35.708670Z",
-     "iopub.status.idle": "2025-09-06T21:02:36.346925Z",
-     "shell.execute_reply": "2025-09-06T21:02:36.346925Z"
+     "iopub.execute_input": "2025-09-06T21:13:42.604473Z",
+     "iopub.status.busy": "2025-09-06T21:13:42.604473Z",
+     "iopub.status.idle": "2025-09-06T21:13:43.223465Z",
+     "shell.execute_reply": "2025-09-06T21:13:43.223465Z"
     },
     "executionInfo": {
      "elapsed": 138,
@@ -399,14 +399,7 @@
       "40-50                    Large  \n",
       "50-60                    Large  \n",
       "60-70                   Medium  \n",
-      "70+                      Small  "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
+      "70+                      Small  \n"
      ]
     },
     {
@@ -514,10 +507,10 @@
      "base_uri": "https://localhost:8080/"
     },
     "execution": {
-     "iopub.execute_input": "2025-09-06T21:02:36.349927Z",
-     "iopub.status.busy": "2025-09-06T21:02:36.348926Z",
-     "iopub.status.idle": "2025-09-06T21:02:36.363526Z",
-     "shell.execute_reply": "2025-09-06T21:02:36.363019Z"
+     "iopub.execute_input": "2025-09-06T21:13:43.225467Z",
+     "iopub.status.busy": "2025-09-06T21:13:43.225467Z",
+     "iopub.status.idle": "2025-09-06T21:13:43.238466Z",
+     "shell.execute_reply": "2025-09-06T21:13:43.238466Z"
     },
     "executionInfo": {
      "elapsed": 487,
@@ -561,10 +554,10 @@
    "id": "d5b2ee96",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-09-06T21:02:36.365533Z",
-     "iopub.status.busy": "2025-09-06T21:02:36.365533Z",
-     "iopub.status.idle": "2025-09-06T21:02:36.379109Z",
-     "shell.execute_reply": "2025-09-06T21:02:36.378598Z"
+     "iopub.execute_input": "2025-09-06T21:13:43.240466Z",
+     "iopub.status.busy": "2025-09-06T21:13:43.240466Z",
+     "iopub.status.idle": "2025-09-06T21:13:43.253467Z",
+     "shell.execute_reply": "2025-09-06T21:13:43.253467Z"
     },
     "executionInfo": {
      "elapsed": 403,
@@ -613,10 +606,10 @@
    "id": "08040a34",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-09-06T21:02:36.381117Z",
-     "iopub.status.busy": "2025-09-06T21:02:36.381117Z",
-     "iopub.status.idle": "2025-09-06T21:02:36.395117Z",
-     "shell.execute_reply": "2025-09-06T21:02:36.394117Z"
+     "iopub.execute_input": "2025-09-06T21:13:43.255466Z",
+     "iopub.status.busy": "2025-09-06T21:13:43.255466Z",
+     "iopub.status.idle": "2025-09-06T21:13:43.269465Z",
+     "shell.execute_reply": "2025-09-06T21:13:43.269465Z"
     }
    },
    "outputs": [],
